# Yandex

./: .gitignore  README.md
Active Code/: AddOperationeUBless.cpp  BinaryTreeIteration.cpp  CountWordFreq.cpp  HotelStatistics.cpp  IsPlanetUBless.cpp  PersonStats.cpp  Preprocessing.cpp  RouteManager.cpp  SplitIntoWordsThread.cpp  TreePrinterFileSystem.cpp  UniquePtrVelosiped.cpp  any.cpp  class_diagram.cpp  domain_filter.cpp  equals_to_one_of.cpp  human_genome.cpp  iterator.cpp  money.txt  mutabie_lazy.cpp  test.cpp
Active Code/CMAKE_COOL_NO_USE/ImgConverter/: main.cpp
Active Code/CMAKE_COOL_NO_USE/cmake_ImgLib/: bmp_image.cpp  imglib_dll_interface.cpp  imglib_dll_interface.h
Active Code/CMAKE_COOL_NO_USE/cmake_luminance/: main.cpp  out.ppm
Active Code/Cypher/src/: main.cpp
Active Code/IdealPersonalBudget/: budget_manager.h  bulk_updater.h  entities.h  parser.cpp
Active Code/IdentitySystem/: driving_licence.h  identity_document.h
Active Code/JsonBuilder/: json.h  json_builder.h  main.cpp
Active Code/JsonParse/: LoadFromJson.cpp
Active Code/NewVacationProvider/: booking.h
Active Code/PersonalBudget/: budget_manager.h  date.h
Active Code/RLEsystem/: decompressor.h
Active Code/TransportCatalogue/: TestCatalogue.cpp  TestCatalogue.h  TestCatalogueTextInput.cpp  domain.cpp  domain.h  geo.cpp  geo.h  input_reader.cpp  input_reader.h  json_reader.cpp  json_reader.h  main.cpp  map_renderer.cpp  map_renderer.h  request_handler.h  router.h  stat_reader.cpp  stat_reader.h  svg.cpp  transport_catalogue.cpp  transport_catalogue.h  transport_router.h
Active Code/TransportCatalogue/txts/: result_case.txt  tsB_case2_output.txt
Active Code/XMLParse/: LoadFromXml.cpp  spendings.xml
Active Code/boxes/: structures.cpp
Active Code/cmake_ImgLib/: CMakeLists.txt
Active Code/cmake_ImgLib/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Active Code/cmake_ImgLib/build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
Active Code/cmake_image_mirr_sobel/: CMakeLists.txt
Active Code/cmake_image_mirr_sobel/src/: hmirr.cpp  img_lib.cpp  img_lib.h  vmirr.cpp
Active Code/cmake_image_negate/src/: img_lib.h  ppm_image.cpp
Active Code/inheritance/: people.h
Active Code/iniParse/: ini.cpp  ini.h  input.ini
Active Code/libjson/: json.cpp  json.h  main.cpp
Active Code/libsvg/: main.cpp  svg.cpp
Active Code/naive_vector/: main  main.cpp  vector.h
Active Code/namespaces/: libstat_test.cpp
Active Code/optional/: main.cpp  optional.h
Active Code/protobuild/person/: CMakeLists.txt  address.proto  person.proto
Active Code/protobuild/phone_book/: phone_book.cpp  phone_book.h
Active Code/protobuild/transport_catalogue/: CMakeLists.txt  transport_catalogue.proto
Active Code/shared_ptr_texture/: common.h  main.cpp  texture.h
Active Code/shared_ptr_texture.cpp/: canvas.h  shapes.h
Active Code/supervisor/: people.h  sumilation.cpp  supervisor.h
Active Code/vector/: main  main.cpp  vector.h
Active Code/velo_serial/: main
Past/diploma/boxes/: main.cpp
Past/preparation part/: alibaba.cpp  findsystem.cpp  string.cpp
Past/sprint01/: Structure.cpp  TF-IDF_range.cpp  base_algorithm.cpp  class.cpp  fasterFind_server.cpp  findserver-minusword.cpp  lymbdaCompare.cpp
Past/sprint02/: buffed_compare.cpp  enumerated_types.cpp  find-server-rating.cpp  function_template.cpp  functional_object.cpp  functional_object_find_server.cpp  limits.cpp  some_returned_values_from_function-find_system.cpp  task_about_task.cpp  tasks_processing.cpp  tootoopoint.cpp  universal_functions.cpp
Past/sprint03/: BusPoint.cpp  BusPointMini.cpp  TestFindSystem.cpp  cerr.cpp  framework_for_unittest.cpp  functional_object_find_server.hpp  synonyms.cpp  test.cpp  test_is_palindrom.cpp  testclear.cpp
Past/sprint04/: Animal.cpp  Rational.cpp  find_system_constructor.cpp  find_system_error.cpp  find_system_optional.cpp  lifetime.cpp  nodiscard.cpp  rgoervTEST.hpp
Past/sprint05/: HanoiTower.cpp  MergeSort.cpp  RequestQueue.cpp  Stack.cpp  algorithmPermutation.cpp  findAlgorithms.cpp  find_server_page_break.cpp  findinfor.cpp  iterators.cpp  queue.cpp  recursy.cpp
Past/sprint06/: LogDuration.cpp  StringWrite.cpp  Tickets.cpp  acceleration.cpp  bruteforce.cpp  chrono.cpp  compexivity.cpp  logComplexivity.cpp  log_duration.h  meteostation.cpp  stack_push.cpp  thory!=practice.cpp  threads.cpp  threebonnachi.cpp
Past/sprint07/: ArrayPtr.cpp  array.cpp  copyright_octopus.cpp  dynamic_alloc.cpp  pointer.cpp  simpleScopedPtr.cpp
Past/sprint08/: Joseph'sCounting.cpp  SplitIntoSence.cpp  fix-merge-sort.cpp  median.cpp  string_view.cpp
Past/sprint09/: Synchronized.cpp  asyncExploreKeyWords.cpp  asyncLowerBound.cpp  asyncMergeSort.cpp  async_for_each.cpp  atomic_vector_copy_if.cpp  log_duration.h  map_share.cpp  orderless_copy_if.cpp
Past/sprint10/: BalanceBinarySearchTree.cpp  CountWordFreq.cpp  GoodHashFunctions.cpp  HashFunction.cpp  MoneyBox.cpp  artHashFunction.cpp  canterbury.txt  unorderedParking.cpp
Past/sprint11/: animals.cpp  cache_weak_ptr.cpp  cat_and_witches.cpp  shapes.cpp  unique_tree_node.cpp
Past/sprint12/: CreateFilesSize.cpp  HotelStatistics.cpp  Preprocessing.cpp  create_files.cpp  iile_count_persons.cpp
Past/sprint13/: ComputeStatistics.cpp  RandomContainer.cpp  ebook.cpp
Past/sprint14/: apply_to_many.cpp  overflow.cpp
Past/sprint15/: MagicHat.cpp
Past/sprint15/AuthorSolutionTC/: CMakeLists.txt  domain.h  graph.proto  json_builder.cpp  json_builder.h  json_reader.cpp  json_reader.h  main.cpp  map_renderer.cpp  map_renderer.h  map_renderer.proto  request_handler.cpp  request_handler.h  router.h  serialization.cpp  serialization.h  svg.cpp  svg.h  svg.proto  transport_catalogue.cpp  transport_catalogue.h  transport_catalogue.proto  transport_router.cpp  transport_router.h  transport_router.proto
Past/sprint15/CMAKE_COOL_NO_USE/cmake_image_negate/: CMakeLists.txt
Past/sprint15/CMAKE_COOL_NO_USE/cmake_image_negate/src/: img_lib.cpp  main.cpp
Past/sprint15/CMAKE_COOL_NO_USE/cmake_luminance/: CMakeLists.txt  cat_black.ppm
(+100 files in other folders)
